@@ -1,6 +1,10 @@
 
 === ppracer 0.5 alpha2 ===
 
+2005-11-28  Volker Stroebel <volker@planetpenguin.de>
+	* src/*
+	changed some code to use ppogl::Vec2i
+
 2005-11-27  Volker Stroebel <volker@planetpenguin.de>
 	* src/ppogl/base/vec2i.*
 	added ppogl::Vec2i
